--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,46 @@ body{
     background-color: rgba(37, 88, 183, 0.595) !important;
 }
 
+/*Estilo de la parte de tendencias*/
+.ofertas {
+    padding: 60px 0;
+    background-color:  rgba(17, 58, 134, 0.809);
+   translate: 0 0 1;
+   font-size: 1.4em;
+}
+h1{
+    font-size: 2.1em;
+}
+.card {
+    margin-bottom: 30px;
+}
 
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.card-text {
+    font-size: 1rem;
+}
+.ofertas .carousel-item {
+    display: flex;
+    justify-content: center;
+}
+
+.ofertas .card {
+    margin: 0 10px;
+    width: 250px; /* Ajusta el ancho de las tarjetas según sea necesario */
+}
+/* Animación de desplazamiento del carrusel */
+
+
+/*Estilo de la parte de main*/
 .cuerpo{
     padding: 3% 10%;
     background-color: rgba(37, 88, 183, 0.8);
@@ -46,7 +85,7 @@ body{
 .section-tittle h2{
     font-family: bebas neue;
     font-size: 40px;
-    text-decoration: underline;
+    text-decoration:overline;
 }
 .section-tittle p{
     font-family: bebas neue;
@@ -115,4 +154,18 @@ body{
 .single-services:hover .overlay{
     height: 100%;
     background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8));
+}
+
+/* Estilos personalizados para el footer */
+.footer {
+    background-color: rgb(41, 38, 38)  !important;
+}
+
+/* Estilos para la animación de los iconos */
+.icon-link img {
+    transition: transform 0.3s ease-in-out !important; /* Transición de transformación */
+}
+
+.icon-link:hover img {
+    transform: scale(1.2) !important; /* Aumenta el tamaño del icono al hacer hover */
 }
